<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/camera_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">


            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/addphoto" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/child_layout"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="match_parent"
            android:layout_below="@+id/camera_layout"
            android:padding="20dp">


            <TextView
                android:id="@+id/client_txt"
                android:layout_width="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:text="@string/client"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/petname_value"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:inputType="textCapWords"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/client_txt"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/pet_name"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" />


            <EditText
                android:id="@+id/day_month_year"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="false"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:layout_alignLeft="@+id/petname_value"
                android:layout_below="@+id/petname_value"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/birth_month"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" />


            <TextView
                android:id="@+id/brand_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="16sp"
                android:layout_below="@+id/day_month_year"
                android:layout_marginTop="30dp"
                android:text="@string/food"
                android:textColor="@color/text_color" />


            <EditText
                android:id="@+id/brand_value"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:layout_below="@+id/day_month_year"
                android:layout_alignLeft="@+id/day_month_year"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/brand_txt"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/brand"
                android:inputType="textCapSentences"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" />

            <EditText
                android:id="@+id/protein_value"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="18sp"
                android:inputType="textCapSentences"
                android:fontFamily="@font/roboto_regular"
                android:layout_below="@+id/brand_value"
                android:layout_alignLeft="@+id/brand_value"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/brand_txt"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/proteins"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp" />

            <EditText
                android:id="@+id/servings_value"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:layout_below="@+id/protein_value"
                android:layout_alignLeft="@+id/protein_value"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/servings_norm"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:inputType="textCapSentences"
                android:paddingTop="5dp"
                android:visibility="visible" />




        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pet_parenttxt"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/pet_parent_full"
                    android:textColor="@color/text_color" />


            </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pet_image"
                android:src="@drawable/profilepic"
                android:layout_width="40dp"
                android:layout_height="40dp" />



            <TextView
                android:id="@+id/person_name_text"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/pet_image"
                android:layout_height="wrap_content" />



        </RelativeLayout>


        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mobile_img"
                android:src="@drawable/mobilelogo"
                android:layout_width="40dp"
                android:layout_height="40dp" />



            <TextView
                android:id="@+id/mobile_text"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/mobile_img"
                android:layout_height="wrap_content" />



        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/location_img"
                android:src="@drawable/loaction"
                android:layout_width="40dp"
                android:layout_height="40dp" />



            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/location_img"
                android:layout_height="wrap_content" />




        </RelativeLayout>




        <Button
            android:id="@+id/done_button"
            android:layout_below="@+id/child_layout"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/gradient_bg"
            android:text="@string/done"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
